.gradle/gradle.log
This mapping 'snapshot_20161220' was designed for MC 1.11! Use at your own peril.This mapping 'snapshot_20161220' was designed for MC 1.11! Use at your own peril.

#################################################
         ForgeGradle 2.2-SNAPSHOT-7f5a769        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP unknown               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:generateApiGrammarSource UP-TO-DATE
:sourceApiJava
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:generateGrammarSource UP-TO-DATE
:sourceMainJava
:compileJavaC:\Development\Uni\P4\EduCode\build\sources\main\java\com\educode\symboltable\SymbolTable.java:71: error: <identifier> expected
        DeclaredVariableCounter += value;
                                        ^
1 error
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 54.89 secs
